--- a/index.html
+++ b/index.html
@@ -27,18 +27,29 @@
 	<div class="container">
 		<h3>Current Schedule</h3>
 
-		<div>
-			<ul id="schedule">
-			</ul>
+		<div class="panel-body">
+			<table class="table table-hover" id='curentSchedule'>
+				<thead>
+					<tr>
+						<th>Train Name</th>
+						<th>Destination</th>
+						<th>First Train</th>
+						<th>Frequency</th>
+					</tr>
+				</thead>
+				<tbody>
+							
+				</tbody>
+			</table>
 		</div>
 	</div>
 
 <div class="container">
-	<h3>Current Schedule</h3>
+	<h3>Add New Train Schedule</h3>
 
 	<div>
 		<form id="add-train-form">
-			<label>Name</label>
+			<label>Train Name</label>
 			<input type="text" placeholder="Name of line" id="trainName" />
 		
 			<label>Destination</label>
@@ -56,6 +67,6 @@
 </div>
 
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
-	
+
 </body>
 </html>
